2010-01-31  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Fix __stack_chk_fail check for cross builds configured
	--with-headers
	* configure: Regenerate.

2010-01-29  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-alias.c (same_type_for_tbaa): Return -1 if the types have
	the same alias set and their sizes different constantness.
	(aliasing_component_refs_p): Revert 2009-10-24 change.

2010-01-29  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sparc/sparc.c (sparc_elf_asm_named_section): Declare decl
	unused.

2010-01-29  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-ccp.c (ccp_fold_stmt): Unshare values we substitute.
	Assert we successfully updated the call.

2010-01-29  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/42889
	* df.h (df_set_bb_dirty_nonlr): New prototype.
	* df-core.c (df_set_bb_dirty_nonlr): New function.
	* df-scan.c (df_insn_rescan): Call it instead of
	df_set_bb_dirty for DEBUG_INSNs.

2010-01-29  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37448
	* ipa-inline.c (cgraph_decide_inlining_incrementally): Avoid
	quadratic behavior in most cases.

2010-01-28  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42891
	* config/i386/i386.c (ix86_expand_int_movcc): Convert tmp to SImode
	in the call to gen_x86_movsicc_0_m1.

2010-01-28  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/42871
	* tree-ssa-pre.c (phi_translate_set): Make sure to retain
	leaders.

2010-01-28  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-ccp.c (ccp_fold_stmt): Fold calls and propagate
	into call arguments.

2010-01-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42883
	* tree-cfgcleanup.c (remove_forwarder_block): Do not remove
	the forwarder if the destination is an EH landing pad.

2010-01-28  Razya Ladelsky  <razya@il.ibm.com>

	* tree-parloops.c (transform_to_exit_first_loop): Update the basic
	block list passed to gimple_duplicate_sese_tail.
	(parallelize_loops): Avoid parallelization when the function