@@ -1,3 +1,9 @@
+2010-01-31  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/42898
+	* gimplify.c (gimplify_init_constructor): For volatile LHS
+	initialize a temporary.
+
 2010-01-31  Matthias Klose  <doko@ubuntu.com>
 
 	* configure.ac: Fix __stack_chk_fail check for cross builds configured
